[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Characters/Ordnance/100mmShell/100mmShellAOE.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Abstract/ParticlesCache/Materials/100mmShell.tres" type="Material" id=2]
[ext_resource path="res://Scenes/Abstract/ParticlesCache/Materials/100mmShell2.tres" type="Material" id=3]
[ext_resource path="res://Sprites/Ordnance/ShellImpactImage.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Ordnance/ShellImpactChar.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Effects/ExplosionAnim.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "default",
"speed": 30.0
} ]

[node name="100mmShellAOE" type="Area2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource( 1 )

[node name="AOECollisionShape" type="CollisionShape2D" parent="."]
show_behind_parent = true
scale = Vector2( 1, 0.8 )
shape = SubResource( 1 )

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true
autostart = true

[node name="CharSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.8 )
show_behind_parent = true
scale = Vector2( 1, 0.7 )
z_index = -1
texture = ExtResource( 5 )
offset = Vector2( 0.5, 3 )

[node name="ShockwaveAnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1.1, 1, 1, 1 )
show_behind_parent = true
scale = Vector2( 0.667, 0.467 )
frames = SubResource( 12 )

[node name="ImpactSprite" type="Sprite" parent="."]
modulate = Color( 1.3, 1, 1, 1 )
show_behind_parent = true
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="DustParticles2D" type="Particles2D" parent="."]
modulate = Color( 1.2, 1.1, 1.1, 1 )
scale = Vector2( 0.8, 0.8 )
emitting = false
amount = 60
lifetime = 3.0
one_shot = true
speed_scale = 1.5
explosiveness = 0.95
process_material = ExtResource( 2 )

[node name="DustParticles2D2" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( 0.122025, -5.24403 )
scale = Vector2( 1, 0.8 )
emitting = false
amount = 20
lifetime = 3.0
one_shot = true
speed_scale = 1.5
explosiveness = 0.9
process_material = ExtResource( 3 )

[node name="ImpactSpriteTween" type="Tween" parent="."]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_CollisionTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="tween_all_completed" from="ImpactSpriteTween" to="." method="_on_ImpactSpriteTween_tween_all_completed"]
